camunda8 - v2/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  labels:
    app: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console
          image: docker.io/camunda/console:8.7.72
          ports:
            - name: http
              containerPort: 8080
